# asteroid-hass

./: .clang-format  CMakeLists.txt  README.md  asteroid-hass.desktop.template  asteroid-hass.in
i18n/: asteroid-hass.ar_AR.ts  asteroid-hass.az.ts  asteroid-hass.be.ts  asteroid-hass.cs.ts  asteroid-hass.da.ts  asteroid-hass.de_DE.ts  asteroid-hass.desktop.h  asteroid-hass.desktop.h.ts  asteroid-hass.el.ts  asteroid-hass.en_GB.ts  asteroid-hass.eo.ts  asteroid-hass.es.ts  asteroid-hass.es_AR.ts  asteroid-hass.fa.ts  asteroid-hass.fi.ts  asteroid-hass.fr.ts  asteroid-hass.gl.ts  asteroid-hass.he.ts  asteroid-hass.hi.ts  asteroid-hass.hr.ts  asteroid-hass.hu.ts  asteroid-hass.ia.ts  asteroid-hass.id.ts  asteroid-hass.it.ts  asteroid-hass.ja.ts  asteroid-hass.ka.ts  asteroid-hass.kab.ts  asteroid-hass.ko.ts  asteroid-hass.lb.ts  asteroid-hass.lt.ts  asteroid-hass.mr.ts  asteroid-hass.ms.ts  asteroid-hass.nb_NO.ts  asteroid-hass.nl_BE.ts  asteroid-hass.nl_NL.ts  asteroid-hass.pl.ts  asteroid-hass.pt.ts  asteroid-hass.pt_BR.ts  asteroid-hass.pt_PT.ts  asteroid-hass.ro.ts  (+13 more)
src/: CMakeLists.txt  database.cpp  database.h  entity.cpp  entity.h  entity_model.cpp  entity_model.h  hass.cpp  hass.h  main.cpp  resources.qrc
src/qml/: Entity.qml  Marquee2.qml  Settings.qml  main.qml
